# SnifLeaf

./: .gitignore
Shared/Sources/NetInterceptor/: LogProcessor.swift  MitmProcessManager.swift
SnifLeaf.xcodeproj/: project.pbxproj
SnifLeaf/macOS/: Info.plist
SnifLeaf/macOS/Sources/: AppState.swift
SnifLeaf/macOS/Sources/Config/: AppConfig.swift
SnifLeaf/macOS/Sources/Scenes/Benchmark/UI/: CategoryBenchmarkTableView.swift
SnifLeaf/macOS/Sources/Scenes/LogList/Interactor/: LogListInteractor.swift
SnifLeaf/macOS/Sources/Scenes/LogList/UI/: LogListBodyView.swift
SnifLeafCore/Sources/Data/Models/: TrafficCategory.swift
SnifLeafCore/Sources/Data/Services/Database/: GRDBManager.swift
configs/: SnifLeaf-macOS-Debug.xcconfig  SnifLeaf-macOS-Release.xcconfig
ml-service/: requirements.txt
ml_service/: README.md  mls.service  mls.service.watchdog  pyproject.toml  requirements.txt  setup.sh
ml_service/mls/: __init__.py  __main__.py  constants.py  exceptions.py  main.py
ml_service/mls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ml_service/mls/commands/: __init__.py  arguments.py  cli_options.py
snifai/: README.md  pyproject.toml  setup.sh  snifai.service  snifai.service.watchdog
snifai/snifai/: __init__.py  __main__.py  exceptions.py  main.py
snifai/snifai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
snifai/snifai/commands/: __init__.py  arguments.py  cli_options.py  training_commands.py
