[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mls"
dynamic = ["version"]

authors = [
  {name = "Hg Q."},
  {name = "Hg Q.", email = "hgq287@gmail.com"},
]

description = "CoreML-CLI: An AI tool to build Core ML models for Swift projects."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
mls = "mls.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mls*"]
exclude = ["tests", "tests.*", "user_data", "user_data*"]
namespaces = true
